# ERPNext-Bidtracker

./: README.md  pyproject.toml
bid_tracker/: MANIFEST.in  README.md  api.py  hooks.py  install.py  modules.txt  patches.txt  setup.py
bid_tracker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bid_tracker/bid_management/: api.py
bid_tracker/bid_management/config/: desktop.py
bid_tracker/bid_management/doctype/bid_cost_entry/: bid_cost_entry.json  bid_cost_entry.py
bid_tracker/bid_management/doctype/bid_record/: bid_record.js  bid_record.json  bid_record.py
bid_tracker/bid_management/public/js/: bid_record.js
bid_tracker/bid_management/report/bid_pnl_summary/: bid_pnl_summary.json  bid_pnl_summary.py
bid_tracker/bid_tracker/: hooks.py  install.py  modules.txt
bid_tracker/bid_tracker/config/: desktop.py
bid_tracker/doctype/bid_cost_entry/: bid_cost_entry.json  bid_cost_entry.py
bid_tracker/doctype/bid_record/: bid_record.json
bid_tracker/fixtures/: dashboard.json  dashboard_chart.json  email_account.json  notification.json  number_card.json  report.json  role.json  workflow.json  workflow_action.json  workflow_action_master.json  workflow_state.json  workspace.json
bid_tracker/patches/v1_0/: add_timesheet_bid_record.py  backfill_dashboard_metrics.py
bid_tracker/public/: bid_record.js
bid_tracker/public/js/: bid_record.js
frappe-bench/: Procfile
frappe-bench/config/: redis_cache.conf  redis_queue.conf
frappe-bench/sites/: apps.json  common_site_config.json
frappe-bench/sites/assets/: assets-rtl.json  assets.json  erpnext  frappe
(+7 files in other folders)
