[project]
name = "bid_tracker"
version = "0.1.0"
description = "ERPNext Bid Tracker custom app"
requires-python = ">=3.10"
authors = [
    { name = "Bunmeng Te", email = "tebunmeng2004@gmail.com" },
    { name = "Rudra Pandey", email = "prudra1234@gmail.com" }
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
